[package]
name = "osuparse"
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/eltrufas/osuparse"
documentation = "https://docs.rs/osuparse"
version = "2.0.0"
authors = ["Rafael Castillo <rafael@trfs.me>"]
description = "Crate for parsing osu! beatmaps."

[badges]
appveyor = { repository = "eltrufas/osuparse", branch = "master", service = "github" }
travis-ci = { repository = "eltrufas/osuparse", branch = "master" }
codecov = { repository = "eltrufas/osuparse", branch = "master", service = "github" }

[dependencies]
unicase = "2.2.0"

